# script-enriquecedor

./: .env.example  .gitignore  CHANGELOG.md  README.md  analizar_resultados.py  cli.py  lanzar_extraccion_masiva.py  llm_extractor.py  pipeline_integrado_ia.py  pyproject.toml
src/script_enriquecedor/: __init__.py  cli.py  pipeline.py
src/script_enriquecedor/core/: __init__.py  config.py  dedup.py  logger.py  models.py  state.py
src/script_enriquecedor/core/metadata_schemas/: __init__.py  aeronauticas.py  barrios_privados.py  clinicas.py  consulados.py  depositos_fiscales.py  droguerias.py  embajadas.py  empresas.py  entes_estatales.py  hoteles.py  logisticas.py  (+4 more)
src/script_enriquecedor/discovery/: __init__.py  anmat.py  arlog.py  base.py  caip.py  dorks.py  gmaps.py  registry.py  sssalud.py  zonaprop_argenprop.py
src/script_enriquecedor/enrichment/: __init__.py  apollo.py  geocoder.py  hunter.py  llm_client.py  prompt_generator.py  snov.py
src/script_enriquecedor/importers/: __init__.py  linkedin_csv.py  phantombuster.py
src/script_enriquecedor/merger/: __init__.py  normalizers.py  unifier.py  validators.py
src/script_enriquecedor/scraping/: __init__.py  fetcher.py  rate_limiter.py  robots.py  user_agents.py
src/script_enriquecedor/storage/: __init__.py  batch_manager.py  csv_writer.py  quality.py  vps_uploader.py
src/script_enriquecedor/ui/: __init__.py  menus.py  progress.py  prompts.py  tables.py
tests/: test_csv_compat_prisma.py  test_dedup.py  test_dorks_fallback.py  test_fetcher.py  test_fuzzy_quality.py  test_models.py  test_prompt_generator.py
(+15 files in other folders)
