[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "script-enriquecedor"
version = "2.0.0"
description = "Pipeline B2B multi-vertical de enriquecimiento de leads — Techcam"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI + UI
    "typer[all]>=0.12",
    "rich>=13",
    # Modelos y configuración
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    # LLM abstraction layer
    "litellm>=1.40",
    # HTTP + scraping
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    # Búsqueda / descubrimiento
    "googlesearch-python>=1.2",
    "duckduckgo-search>=6",
    # Geocoding
    "geopy>=2.4",
    # Secretos / config
    "python-dotenv>=1.0",
    # Logs estructurados
    "structlog>=24",
    # Retries
    "tenacity>=8.3",
    # Async
    "aiohttp>=3.9",
    # Dedup fuzzy (Fase 3)
    "rapidfuzz>=3.9",
]

[project.scripts]
enriquecedor = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/script_enriquecedor"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
